# near-self-update

./: Cargo.toml  Makefile
contract/: Cargo.toml  build.rs
contract/src/: lib.rs  tests.rs
integration-tests/: Cargo.toml
integration-tests/src/: context.rs  contract_interface.rs  lib.rs
model/: Cargo.toml
model/src/: api.rs
near-self-update/: Cargo.toml
near-self-update-model/: Cargo.toml
near-self-update-model/src/: lib.rs
near-self-update-proc/: Cargo.toml
near-self-update-proc/src/: lib.rs
near-self-update/src/: lib.rs
res/: test_contract.wasm  updated_contract.wasm
scripts/: build-integration.sh  build.sh
src/: lib.rs
tests/: Cargo.toml  test.rs
tests/src/: lib.rs
