[workspace]

resolver = "2"

default-members = ["near-self-update"]
members = ["near-self-update", "near-self-update-model", "integration-tests", "tests", "contract", "model"]

[workspace.dependencies]
fake = "2.8.0"
rand = "0.8.5"
anyhow = "1.0.75"
async-trait = "0.1.74"
tokio = "1.28"

model = { path = "model" }
near-self-update = { path = "near-self-update" }
near-self-update-model = { path = "near-self-update-model" }

integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "83a69f7ba4acab9405bf935f7dfc70f2f5279c40" }
integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "0b3c2faf0db31cdb3481be4d35dbb48b62a98618" }

near-workspaces = "0.9.0"
near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
