[workspace]

resolver = "2"

default-members = ["near-self-update-proc"]
members = ["near-self-update-proc", "near-self-update"]

[workspace.dependencies]
fake = "2.8.0"
rand = "0.8.5"
anyhow = "1.0.75"
tokio = "1.28.0"

update-model = { path = "model" }
near-self-update-proc = { path = "near-self-update-proc" }
near-self-update = { path = "near-self-update" }

nitka = "=0.4.1"
nitka-proc = "=0.4.0"

near-workspaces = "0.14.0"
near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
