[package]
name = "integration-tests"
version = "0.0.1"
edition = "2021"


[dependencies]
update-model = { workspace = true, features = ["integration-test", "integration-api"] }
near-self-update = { workspace = true }

nitka = { workspace = true }
nitka-proc = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
near-sdk = { workspace = true }
near-workspaces = { workspace = true }
