[package]
name = "update-model"
version = "0.1.0"
edition = "2021"

[lib]
name = "update_model"

[features]
default = []
release-api = []
integration-test = ["dep:nitka", "dep:near-workspaces"]
integration-api = ["dep:nitka", "dep:near-workspaces"]


[dependencies]
anyhow = { workspace = true }
near-sdk = { workspace = true }
nitka = { workspace = true, optional = true }
nitka-proc = { workspace = true }
near-workspaces = { workspace = true, optional = true }
near-self-update-model = { workspace = true }
