[package]
name = "near-self-update-proc"
version = "0.2.0"
authors = ["Vasily Styagov <styagov.dev@gmail.com>"]
description = "Near contract update helper procedural macro"
homepage = "https://github.com/sweatco/near-self-update"
repository = "https://github.com/sweatco/near-self-update"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
