[package]
name = "near-self-update"
version = "0.0.1"
authors = ["Vasily Styagov <styagov.dev@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
near-sdk = "4.1.1"

