[package]
name = "near-self-update"
version = "0.1.2"
edition = "2021"
description = "Near contract update helper"
homepage = "https://github.com/sweatco/near-self-update"
repository = "https://github.com/sweatco/near-self-update"
license = "MIT OR Apache-2.0"

[lib]
name = "near_self_update"

[dependencies]
anyhow = { workspace = true }
nitka = { workspace = true }
near-workspaces = { workspace = true }
